fix overflow issues and add CTA buttons "

--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -3,7 +3,9 @@
 }
 
 .mockup-container {
-	max-width: 600px;
+	box-sizing: border-box;
+	max-width: 500px;
+	width: 85%;
 	text-align: center;
 	display: inline-block;
 	padding:	0px 10px 0px 10px;
@@ -16,6 +18,7 @@
 
 .mockup {
 	max-width: 500px;
+	width: 100%;
 	height: auto;
 	display: inline-block;
 }
@@ -24,3 +27,8 @@
 
 }
 
+.buttonContainer {
+	display: inline-block;
+	text-align: center;
+	margin: 10px 5px;
+}
